--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: lirbery
+  name: wherkil
   annotations:
     dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP  
   ports:
-  - name: "lirbery"
+  - name: "wherkil"
     port: 8080
   selector:
-    app: lirbery
+    app: wherkil
