--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wherkil
+  name: cultural
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: wherkil
+      app: cultural
   template:
     metadata:
       labels:
-        app: wherkil
+        app: cultural
     spec:
       containers:
-      - image: okteto.dev/wherkil:latest
-        name: wherkil
+      - image: okteto.dev/cultural:latest
+        name: cultural
         ports:
         - containerPort: 8080
         env:
         - name: PORT
           value: "8080"
         - name: ProxySite
-          value: "www.anime1st.com"
+          value: "www.azmovies.net"
         - name: Vless_UUID
-          value: "62c598d2-893b-4aab-a48b-70c9fece07a4"
+          value: "3f98bee0-8b53-4850-b70e-dd3cf1347456"
         - name: Vless_Path
-          value: "/SRK6DHG"
+          value: "/xcukasd"
         - name: Vmess_UUID
-          value: "62c598d2-893b-4aab-a48b-70c9fece07a4"
+          value: "3f98bee0-8b53-4850-b70e-dd3cf1347456"
         - name: Vmess_Path
-          value: "/VBUGZXO"
+          value: "/asokrtc"
         - name: Share_Path
-          value: "/Share427"
+          value: "/Share489"
