--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cultural
+  name: partment
   annotations:
     dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP  
   ports:
-  - name: "cultural"
+  - name: "partment"
     port: 8080
   selector:
-    app: cultural
+    app: partment
