--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,4 +1,4 @@
 deploy:
-  - okteto build -t okteto.dev/partment:latest
+  - okteto build -t okteto.dev/pround:latest
   - kubectl apply -f k8s/service.yml
   - envsubst < k8s/deployment.yaml | kubectl apply -f -
